@@ -1,4 +1,4 @@
-.\" $Id: ares_getnameinfo.3,v 1.2 2007-09-28 14:46:51 sesse Exp $
+.\" $Id: ares_getnameinfo.3,v 1.3 2009-05-02 02:36:48 yangtse Exp $
 .\"
 .\" Copyright 2005 by Dominick Meglio.
 .\"
@@ -14,7 +14,7 @@
 .\" this software for any purpose.  It is provided "as is"
 .\" without express or implied warranty.
 .\"
-.TH ARES_GETNAMEINFO 3 "16 May 2005"
+.TH ARES_GETNAMEINFO 3 "1 May 2009"
 .SH NAME
 ares_getnameinfo \- Address-to-nodename translation in protocol-independent manner
 .SH SYNOPSIS
@@ -25,7 +25,7 @@ ares_getnameinfo \- Address-to-nodename translation in protocol-independent mann
 .B	int \fItimeouts\fP, char *\fInode\fP, char *\fIservice\fP)
 .PP
 .B void ares_getnameinfo(ares_channel \fIchannel\fP, const struct sockaddr *\fIsa\fP,
-.B 	socklen_t \fIsalen\fP, int \fIflags\fP, ares_nameinfo_callback \fIcallback\fP,
+.B 	ares_socklen_t \fIsalen\fP, int \fIflags\fP, ares_nameinfo_callback \fIcallback\fP,
 .B 	void *\fIarg\fP)
 .fi
 .SH DESCRIPTION
