@@ -551,9 +551,6 @@ AC_CHECK_TYPE([bool],[
 
 CARES_CONFIGURE_ARES_SOCKLEN_T
 
-# Check for socklen_t or equivalent
-CURL_CHECK_TYPE_SOCKLEN_T
-
 TYPE_IN_ADDR_T
 
 TYPE_SOCKADDR_STORAGE
