@@ -4,8 +4,9 @@ Changed:
 
  o in6_addr is not used in ares.h anymore, but a private ares_in6_addr is
    instead declared and used
- p ares_gethostbyname() now supports 'AF_UNSPEC' as a family for resolving
+ o ares_gethostbyname() now supports 'AF_UNSPEC' as a family for resolving
    either AF_INET6 or AF_INET
+ o a build-time configured ares_socklen_t is now used instead of socklen_t
 
 Fixed:
 
